--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "video.js": "^7.2.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-script2": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
