--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vue-script2": "^2.1.0"
+    "vue-script2": "^2.1.0",
+    "vue-ribbon": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
