--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-videojs7",
-  "version": "0.1.6",
+  "version": "1.0.0",
   "description": "A vue video player plugin using video.js 7.",
   "repository": {
     "type": "git",
@@ -8,6 +8,9 @@
   },
   "keywords": [
     "vue",
+    "vue video",
+    "vue m3u8",
+    "vue hls",
     "video.js 7",
     "video.js",
     "videojs",
@@ -28,7 +31,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "video.js": "^7.11.4",
+    "video.js": "^7.11.6",
+    "@videojs/vhs-utils": "^3.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
